packages/nativescript-wamr/src/vendors/wamr-rust/wamr-sys/src/lib.rs

//! Raw Rust FFI bindings to the WAMR (WebAssembly Micro Runtime) C API.
//!
//! Generated by `bindgen` from `wasm_export.h` and `wasm_c_api.h` at build time.
//! The committed `bindings.rs` serves as a fallback reference.

#![allow(
    non_upper_case_globals,
    non_camel_case_types,
    non_snake_case,
    dead_code,
    clippy::all
)]

include!(concat!(env!("OUT_DIR"), "/bindings.rs"));

// ── NSC WAMR shim: flat helpers over WAMR APIs ─────────────────────────────
// These are compiled alongside WAMR (see build.rs) and declared here so the
// wamr-jni crate can call them directly.

/// Opaque runtime handle — the C shim defines `nsc_wamr_runtime_t` internally.
pub type nsc_wamr_runtime_t = std::os::raw::c_void;

extern "C" {
    pub fn nsc_wamr_to_simple_type(wamr_type_byte: i32) -> i32;
    pub fn nsc_wamr_from_simple_type(simple_type: i32) -> i32;
    pub fn nsc_wamr_version() -> *const std::os::raw::c_char;
    pub fn nsc_wamr_create_runtime(
        stack_size_in_bytes: i32,
        error_buf: *mut std::os::raw::c_char,
    ) -> *mut nsc_wamr_runtime_t;
    pub fn nsc_wamr_destroy_runtime(runtime: *mut nsc_wamr_runtime_t);
    pub fn nsc_wamr_load_module(
        runtime: *mut nsc_wamr_runtime_t,
        bytes: *const u8,
        size: i32,
        error_buf: *mut std::os::raw::c_char,
    ) -> wasm_module_t;
    pub fn nsc_wamr_instantiate(
        module: wasm_module_t,
        runtime: *mut nsc_wamr_runtime_t,
        error_buf: *mut std::os::raw::c_char,
    ) -> wasm_module_inst_t;
    pub fn nsc_wamr_module_name(module: wasm_module_t) -> *const std::os::raw::c_char;
    pub fn nsc_wamr_find_function(
        runtime: *mut nsc_wamr_runtime_t,
        name: *const std::os::raw::c_char,
        error_buf: *mut std::os::raw::c_char,
    ) -> wasm_function_inst_t;
    pub fn nsc_wamr_function_name(
        func: wasm_function_inst_t,
    ) -> *const std::os::raw::c_char;
    pub fn nsc_wamr_function_arg_count(func: wasm_function_inst_t) -> i32;
    pub fn nsc_wamr_function_arg_type(func: wasm_function_inst_t, index: i32) -> i32;
    pub fn nsc_wamr_function_ret_count(func: wasm_function_inst_t) -> i32;
    pub fn nsc_wamr_function_ret_type(func: wasm_function_inst_t, index: i32) -> i32;
    pub fn nsc_wamr_call(
        func: wasm_function_inst_t,
        n_args: i32,
        arg_ptrs: *mut *mut u64,
    ) -> *const std::os::raw::c_char;
    pub fn nsc_wamr_get_results(
        func: wasm_function_inst_t,
        n_rets: i32,
        ret_ptrs: *mut *mut u64,
    ) -> *const std::os::raw::c_char;
    pub fn nsc_wamr_memory_size(runtime: *mut nsc_wamr_runtime_t) -> i32;
    pub fn nsc_wamr_get_memory(runtime: *mut nsc_wamr_runtime_t) -> *mut u8;
    pub fn nsc_wamr_link_host_function(
        inst: wasm_module_inst_t,
        module_name: *const std::os::raw::c_char,
        name: *const std::os::raw::c_char,
        signature: *const std::os::raw::c_char,
        callback: *mut std::os::raw::c_void,
    ) -> *const std::os::raw::c_char;
    pub fn nsc_wamr_get_global(
        inst: wasm_module_inst_t,
        name: *const std::os::raw::c_char,
        type_out: *mut i32,
        bits_out: *mut u64,
    ) -> *const std::os::raw::c_char;
    pub fn nsc_wamr_get_global_type(
        inst: wasm_module_inst_t,
        name: *const std::os::raw::c_char,
    ) -> i32;
    pub fn nsc_wamr_set_global(
        inst: wasm_module_inst_t,
        name: *const std::os::raw::c_char,
        type_: i32,
        bits: u64,
    ) -> *const std::os::raw::c_char;
}
